[package]
name = "enter-l2-node"
version = "1.0.0"
edition = "2021"
authors = ["Enter L2 Team"]
description = "Public node software for Enter L2 network"
license = "MIT"
repository = "https://github.com/enter-l2/node"
homepage = "https://enterl2.com"
documentation = "https://docs.enterl2.com"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "0.14", features = ["full"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = "0.28"
hex = "0.4"

# Ethereum
ethers = { version = "2.0", features = ["ws", "rustls"] }
alloy-primitives = "0.4"

# Configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-prometheus = "0.6"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
pin-project = "1.0"

# Performance
rayon = "1.7"
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[features]
default = ["full-node"]
full-node = []
light-node = []
archive-node = ["full-node"]
rpc-node = ["full-node"]

[[bin]]
name = "enter-l2-node"
path = "src/main.rs"

[[bin]]
name = "enter-l2-cli"
path = "src/cli.rs"

[[bench]]
name = "sync_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
